--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "pg": "^8.5.0",
     "sequelize": "^6.3.5"
