--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "nandu",
+    "username": "ruhithomas",
+    "password": "",
     "database": "socialnetwork",
     "host": "127.0.0.1",
     "dialect": "postgres"
